# TranscriptAI

./: .gitignore  AGENTS.md  ARCHITECTURE.md  README.md  TranscriptAI.bat  build_exe.py  install_cuda.bat  mac-launch  mac-run.command  pyproject.toml  requirements.txt  run.py  run_web.py  win-launch.bat  win-run.bat
docs/: ARCHITECTURE.md  SPEC.md
scripts/: build_exe.py  setup_windows.bat
src/: main.py
src/config/: __init__.py  paths.py
src/core/: __init__.py  analyzer.py  downloader.py  input_processor.py  processor.py  transcriber.py
src/ui/: __init__.py  analysis_tab.py  download_tab.py  main_window.py  results_tab.py  styles.py
src/ui/widgets/: __init__.py  multi_select_dropdown.py
src/ui/workers/: __init__.py  analysis_worker.py  download_worker.py
src/web/: __init__.py  server.py
src/web/static/: app.js  index.html  style.css
